syntax="proto2";
package ad_packet;

option go_package=".;ad_packet";

message Request2Adaptor
{
	enum AdReqProtocolType
	{
		XML = 1;
		JSON = 2;
	}
	repeated string cookies     = 1;  // 存放cookies
	repeated string params      = 2;  // 存放key=value形式的参数信息
	//optional string referer   = 3;  // the Referer
	optional bytes  raw_referer = 4;  // 替代 string 类型的referer

	optional AdReqProtocolType req_protocol = 5; //透传字段格式
}

message ResponseFromAdaptor
{
	enum AidServerType
	{
		MASTER = 0;
		SLAVE  = 1;
	}

	message DotData
	{
		optional  int32   iFlag    = 1; //打点数据类型
		optional  uint32  uiTime   = 2; //打点数据时间点
		optional  int32   iProduct = 3; //iFlag=3表示商品id(边看变买)
		optional  int32   iAnchor  = 4; //是否有锚点
		optional  int32   iPosX	   = 5; //锚点x值
		optional  int32   iPosY    = 6; //锚点y值
	}

	message SourceData
	{
		optional  int32  iSourceIdType = 1; // id分类 1直播(pid) 2点播(vid) 3直播(sid)<sid转pid失败时>
		optional  string strSourceId   = 2; // vid/pid/sid
		optional  int32  iUserTypeReq  = 3; // 请求的用户身份(pu参数) -1=未知 0=未登录 1=登陆 2=好莱坞 4=qqvip 5=qqsvip 7=绿钻 8=15个会员 9=tv会员 10=体育会员
		optional  int32  iVipInfoRsp   = 4; // 校验后的会员身份                      1=非会员 2=好莱坞 4=qqvip 5=qqsvip 7=绿钻 8=15个会员 9=tv会员 10=体育会员
		optional  int32  iVideoType    = 5; // 视频分类     -1未知 4体育直播
		optional  int32  iPayFlag      = 6; // 付费类型     -1未知 0免费 1付费
		optional  int32  iCheckLogin   = 7; // 校验登录态   0=未校验登录态 1=未登录 2=登录校验成功 3=登录态失效 4=登录校验失败
		optional  int32  iCheckUser    = 8; // 校验用户身份 1=不是会员 2=是会员 3=获取用户身份失败
	}

	message AdtypeData
	{
		optional string str_adtype     = 1; //广告位类型
		optional string str_adid       = 2; //ADID
	}

	message SceneDotData
	{
		optional uint32 uID            = 1; //场景点唯一ID
		optional uint32 uTime          = 2; //打点时刻
		repeated uint32 uSceneType     = 3; //场景类型
		repeated uint32 uPackId        = 5; //场景点对应的包ID
	}

	message ExtraControlData
	{
		optional int32 tvAdFreeFlag	  = 1; //0:其他，1: 用户登录免广告  2: 用户未登录可参与登录免广告
	}

	optional string aid               = 1;
	optional string oaid              = 2;
	optional int32 duration           = 3; //视频时长
	optional int32 tpid               = 4;
	optional int32 isvip              = 5;
	optional int32 add                = 6;
	// optional int32 breakTime       = 7;
	optional int32 adFlag             = 8;
	optional int32 stopWatch          = 9; // 秒表/跑表.记adaptor与aid server通讯所有的时长,单位毫秒.
	optional AidServerType aidSvrType = 10;
	optional uint32 aidSvrIP          = 11;
	optional string xml               = 12;
	optional int32 int32_trans_type   = 13[default=0];
	repeated DotData     vecDotData   = 14; //打点数据
	optional SourceData  stSourceData = 15; //视频及用户数据

	//iUserType参数说明
	//100=新增用户,无免广告 101=新增用户,24小时免广告 102=新增用户,48小时免广告
	//103=新增用户,3贴后免广告持续7天 104=新增用户,4贴后免广告持续7天
	//200=次周2天以下,无免广告 201=次周2天以下,24小时免广告 202=次周2天以下,48小时免广告
	//203=次周2天以下,4贴后免广告持续7天 204=次周2天以下,5贴后免广告持续7天
	optional int32  iUserType         = 16;
	optional uint64 ullStartTimeStamp = 17; //用户时间戳 用户新增时间,次周首次活跃时间(待定)

	optional string strJson           = 18; //json格式的透传字段
	optional string cover_name        = 19; //专辑中文名称
	optional string video_name        = 20; //单视频中文名称
	optional string column_name       = 21; //栏目中文名称
	optional string str_vid           = 22; //vid
	repeated uint32 labels            = 23;  //请求命中的所有标签
	repeated AdtypeData stAdtypeData  = 24; //分广告位类型的ADID等信息
	repeated SceneDotData stSceneDot  = 25; //场景点
	optional uint64 uin               = 26; //uin  AidServer向调用者返回用户qq
	optional ExtraControlData extraData = 27;	//其他控制参数
	optional uint32 trytime_second = 28;		// 试看时长，单位秒
	optional uint32 trytime_withad_flag = 29;	// 试看是否出广告的标记，1为试看出广告，0为其他默认值

	optional string strTagSource      = 100; //媒资类型泛tag数据来源

}

service aid_free_sys {
	rpc Query (Request2Adaptor) returns (ResponseFromAdaptor);
}